# openwrt-mqtt-proxy

./: .env  Cargo.toml  Readme.md  copy_to_server.sh  devsetup.sh
.cargo/: config
openwrt_crontab/: cron
openwrt_etc_init.d/: feig-proxy
openwrt_etc_logrotate.d/: feig-proxy
src/: main.rs
